--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,3 +12,26 @@
 .icon-block .material-icons {
 	font-size: inherit;
 }
+
+.close {
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    z-index: 10000;
+    cursor: pointer;
+    color: #DDDDDD !important;
+    transition: color 0.5s ease;
+}
+.close:hover {
+    color: #F44336 !important;
+}
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
