--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,3 +35,19 @@
     user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
+
+
+.box__uploading,
+.box__success,
+.box__error {
+    display: none;
+}
+
+.box {
+    background-color: white;
+    outline: 2px dashed black;
+    outline-offset: -10px;
+}
+.box .box__dragndrop {
+    display: inline;
+}
